fix z-index reaction

--- a/resources/assets/styles/layouts/home.scss
+++ b/resources/assets/styles/layouts/home.scss
@@ -1,6 +1,6 @@
 .main-content {
   padding-top: 26px;
-  z-index: 1;
+  z-index: 2;
 
   @include media-breakpoint-down(md) {
     padding-top: 230px;
